# Erfahrungsaustausch-Repository-Pattern

./: README.md  pyproject.toml
erfahrungsaustasuch_repository_pattern/: task_1.py
tests/: test_task_1.py
