[tool.poetry]
name = "erfahrungsaustasuch-repository-pattern"
version = "0.1.0"
description = ""
authors = ["julianfrenzel <26822719+b0lle@users.noreply.github.com>"]
readme = "README.md"
# packages = [{include = "erfahrungsaustasuch_repository_pattern", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
